<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">decortest</string>

    <string name="text">Text</string>
    <string name="decorType_line" >Line</string>
    <string name="decorType_shape">Shape</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="day">Day:</string>
    <string name="position">Position:</string>
</resources>